--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
         <div id="btn-card">
             <div id="facebookers">
                 <h4>Facebook styles</h4>
-                <button class="facebook-btn facebook-dark-btn">Dark Button</button>
-                <button class="facebook-btn facebook-light-btn">Light Button</button>
+                <button class="facebook-btn facebook-dark-btn">DarkFb Button</button>
+                <button class="facebook-btn facebook-light-btn">LightFb Button</button>
             </div><br><br>
             <div id="three-D">
                 <h4>3 D styles</h4>
-                <button class="three-D-btn three-D-btn-1">3 D button 1</button>
+                <button class="three-D-btn three-D-btn-1">3-D button 1</button>
                 <button class="three-D-btn three-D-circle">Circle Button</button>
             </div><br><br>
             <div id="gradient-borders">
